[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqsartoolbox"
version = "0.1.0"
description = "Python client for the local QSAR Toolbox Web API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "PyQSARToolbox Developers" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "pandas>=1.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "ruff>=0.5.0"
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25"
]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["pyqsartoolbox"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]

[tool.ruff.per-file-ignores]
"tests/*" = ["E402"]
